tests/machine/x/rb/partial_application.rb
def add(a, b)
	return (a + b)
end

add5 = add(5)
puts([add5.call(3)].join(" "))
